@@ -251,6 +251,9 @@ version 26-git (????-??-??):
   - improvement: 'phpui.supported_customer_contact_types' configuration variable controls
     what customer contact types are supported by system (by default all contact types
     which are implemented) [chilan]
+  - improvement: 'phpui.helpdesk_customer_notification_mail_subject' allows to format message subject
+    of post sent to customer during new ticket message creation
+    (default: '[RT#%tid] %subject') [chilan]
 
 version 25.0 (2020-05-15):
 
